--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,14 +14,17 @@ website:
         text: Home
       - text: "Journal"
         menu: 
-          - text: "01 Tidyverse"
-            file: content/01_journal/01_tidyverse.qmd
-          - text: "02 Data Acquisition"
-            file: content/01_journal/02_data_acquisition.qmd
-          - text: "03 Data Wrangling"
-            file: content/01_journal/03_data_wrangling.qmd
-          - text: "04 Data Visualization"
-            file: content/01_journal/04_data_visualization.qmd
+          - text: "Machine Learning Fundamentals"
+            file: content/01_journal/Machine Learning Fundamentals.qmd
+          - text: "Supervised ML"
+            file: content/01_journal/Supervised ML
+          - text: "Automated Machine Learning with H2O"
+            file: content/01_journal/Automated Machine Learning with H2O.qmd
+          - text: "Performance Measures"
+            file: content/01_journal/Performance Measures.qmd
+          - text: "LIME.qmd"
+            file: content/01_journal/LIME.qmd
+
       - text: "Class notes"
         file: content/02_notes/05_class_notes.qmd
       - text: "Links"
